v 7.5.0
  - API: Add support for Hipchat (Kevin Houdebert)
  - Add time zone configuration on gitlab.yml (Sullivan Senechal)
  - Fix LDAP authentication for Git HTTP access
  - Fix LDAP config lookup for provider 'ldap'
  - Add Atlassian Bamboo CI service (Drew Blessing)

v 7.4.2
  - Fix internal snippet exposing for unauthenticated users

v 7.4.1
  - Fix LDAP authentication for Git HTTP access
  - Fix LDAP config lookup for provider 'ldap'
  - Fix public snippets
  - Fix 500 error on projects with nested submodules

v 7.4.0
  - Refactored membership logic
  - Improve error reporting on users API (Julien Bianchi)
  - Refactor test coverage tools usage. Use SIMPLECOV=true to generate it locally
  - Default branch is protected by default
  - Increase unicorn timeout to 60 seconds
  - Sort search autocomplete projects by stars count so most popular go first
  - Add README to tab on project show page
  - Do not delete tmp/repositories itself during clean-up, only its contents
  - Support for backup uploads to remote storage
  - Prevent notes polling when there are not notes
  - API: Add support for forking a project via the API (Bernhard Kaindl)
  - API: filter project issues by milestone (Julien Bianchi)
  - Fail harder in the backup script
  - Changes to Slack service structure, only webhook url needed
  - Zen mode for wiki and milestones (Robert Schilling)
  - Move Emoji parsing to html-pipeline-gitlab (Robert Schilling)
  - Font Awesome 4.2 integration (Sullivan Senechal)
  - Add Pushover service integration (Sullivan Senechal)
  - Add select field type for services options (Sullivan Senechal)
  - Add cross-project references to the Markdown parser (Vinnie Okada)
  - Add task lists to issue and merge request descriptions (Vinnie Okada)
  - Snippets can be public, internal or private
  - Improve danger zone: ask project path to confirm data-loss action
  - Raise exception on forgery
  - Show build coverage in Merge Requests (requires GitLab CI v5.1)